crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__alias_params_empty.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "type Pair[] = Number"
---
alder::syntax

  × type parameter lists cannot be empty
   ╭─[/project/src/main.ald:1:10]
 1 │ type Pair[] = Number
   · ┬        ┬
   · │        ╰── empty parameter list
   · ╰── this type alias starts here
   ╰────
