crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__alias_params_end.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "type Pair[a, b = (a, b)"
---
alder::syntax

  × I was expecting `,` or `]` after this type parameter
   ╭─[/project/src/main.ald:1:16]
 1 │ type Pair[a, b = (a, b)
   ·          ┬     ┬
   ·          │     ╰── expected `,` or `]`
   ·          ╰── this type parameter list starts here
   ╰────
