crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__attribute_argument_end.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "#[derive(Show Eq)] type X"
---
alder::syntax

  × I was expecting another attribute argument or the end of the argument list
   ╭─[/project/src/main.ald:1:15]
 1 │ #[derive(Show Eq)] type X
   · ┬             ┬
   · │             ╰── expected `,` or `)`
   · ╰── this attribute sequence starts here
   ╰────
