crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__attribute_dangling.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "#[extern]"
---
alder::syntax

  × an attribute must be followed by a declaration at the end of the file
   ╭─[/project/src/main.ald:1:10]
 1 │ #[extern]
   · ┬
   · ╰── this attribute sequence starts here
   ╰────
