crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__attribute_end.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "#[derive(Show) type X"
---
alder::syntax

  × this attribute is missing its closing bracket
   ╭─[/project/src/main.ald:1:16]
 1 │ #[derive(Show) type X
   · ┬              ┬
   · │              ╰── expected `]`
   · ╰── this attribute sequence starts here
   ╰────
