crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__body_nested.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "test \"example\" { read(1 2) }"
---
alder::syntax

  × I was expecting a comma or the end of this function call
   ╭─[/project/src/main.ald:1:25]
 1 │ test "example" { read(1 2) }
   ·                      ┬  ┬
   ·                      │  ╰── expected `,` or `)`
   ·                      ╰── this argument list starts here
   ╰────
  help: separate arguments with commas and close the call with `)`
